<resources>
    <string name="app_name">Challenge-Registration Form</string>
    <string name="mountains_logo">Mountains Logo</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_e_mail">E-Mail</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_done">DONE</string>
    <string name="description_mountains_logo">Mountains Logo</string>
</resources>