<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="32dp"
            android:contentDescription="@string/mountains_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/mountain_icon" />

        <Spinner
            android:id="@+id/spinner_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:padding="2dp"
            android:popupBackground="@color/mountains_secondary"
            tools:listitem="@android:layout/simple_list_item_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textCapWords"
                tools:text="Thomas" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_last_name"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textCapWords"
                tools:text="Stevenson" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_e_mail"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                tools:text="tom.stevenson@gmail.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_phone_number"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="phone"
                tools:text="478874748" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                tools:text="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/text_submit"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>